# omx-control

./: CMakeLists.txt  LICENSE.md  README.md  build.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  omx-control.pro
